test/error/type/err2.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err2 = Component
  foo : slot( x: R{0,10} );

elementary
  foo : slot( x: R{0,10} )
    z : Weekday = x;
  end
end

